internal/detect/testdata/namer_validator/invalid_signature/wrong_return_type/main.go
package main

type WrongType struct{}

func (WrongType) Name() int { return 42 }

func main() {}
